--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "Nyanpasu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.23"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
