--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-NODE_ENV = "development"
-HOST=localhost
-PORT=8080
+NODE_ENV="development"
+APP_NAME="Nyanpasu"
+APP_URL=localhost
+APP_PORT=8080
+APP_BASE_URL="/nyanpasu"  #change this if runing on github gh-pages
