--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "dotenv": "^8.2.0",
     "gh-pages": "^2.2.0",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
