--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV="development"
-APP_NAME="Nyanpasu"
+APP_NAME=Nyanpasu
 APP_URL=localhost
 APP_PORT=8080
-APP_BASE_URL="/nyanpasu"  #change this if runing on github gh-pages
+#change this if runing on github gh-pages prop
+APP_BASE_URL=/nyanpasu
