update dotenv configure

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV="development"
-APP_NAME=Nyanpasu
-APP_URL=localhost
-APP_PORT=8080
-#change this if runing on github gh-pages prop
-APP_BASE_URL=/nyanpasu
+#change this if runing on github gh-pages
+BASE_URL=/nyanpasu
+
+VUE_APP_NAME=Nyanpasu
+VUE_APP_URL=localhost
+VUE_APP_PORT=8080
